plugins/kotlin/idea/tests/testData/highlighterMetaInfo/unresolved/unresolvedLabel.kt.highlighting.fir
// ALLOW_ERRORS
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY

class <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CLASS'")!>A<!> {
    <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_KEYWORD'")!>init<!> {
        this<!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_LABEL] Unresolved label.'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'"), HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_LABEL'")!>@B<!>
    }
}
